IF (NOT POSEESTIMATION)
	SET(POSEESTIMATION 0 CACHE BOOL "Enable the camera pose estimation module (using OpenCV)")
ENDIF()

IF (POSEESTIMATION)
	# Require new OpenCV 3.1 at least.
	PKG_CHECK_MODULES(OPENCV3 REQUIRED opencv>=3.1)

	SET(POSE_INCDIRS ${CAER_INCDIRS} ${OPENCV3_INCLUDE_DIRS})
	SET(POSE_LIBDIRS ${CAER_LIBDIRS} ${OPENCV3_LIBRARY_DIRS})

	SET(POSE_C_LIBS ${CAER_C_LIBS})
	SET(POSE_CXX_LIBS ${CAER_CXX_LIBS} ${OPENCV3_LIBRARIES} -lopencv_aruco)

	INCLUDE_DIRECTORIES(${POSE_INCDIRS})
	LINK_DIRECTORIES(${POSE_LIBDIRS})

	ADD_LIBRARY(poseestimation SHARED poseestimation.c poseestimation.cpp poseestimation_wrapper.cpp)

	SET_TARGET_PROPERTIES(poseestimation
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(poseestimation ${POSE_C_LIBS} ${POSE_CXX_LIBS})

	INSTALL(TARGETS poseestimation DESTINATION ${CM_SHARE_DIR})
ENDIF()
