IF (NOT ENABLE_STATISTICS)
	SET(ENABLE_STATISTICS 0 CACHE BOOL "Enable the console statistics module")
ENDIF()

IF (ENABLE_STATISTICS)
	SET(STATISTICS_SRC_FILES statistics.c)

	ADD_LIBRARY(statistics SHARED ${STATISTICS_SRC_FILES})

	SET_TARGET_PROPERTIES(statistics
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(statistics ${CAER_C_LIBS})
ENDIF()
