IF (NOT STEREOCALIBRATION)
	SET(STEREOCALIBRATION 0 CACHE BOOL "Enable stereo camera calibration (using OpenCV)")
ENDIF()

IF (STEREOCALIBRATION)
	# Require new OpenCV 3.1 at least.
	PKG_CHECK_MODULES(OPENCV3 REQUIRED opencv>=3.1)

	PKG_CHECK_MODULES(ALLEGRO5_AUDIO REQUIRED)
	PKG_CHECK_MODULES(ALLEGRO5_ACODEC REQUIRED)

	SET(CALIB_INCDIRS ${CAER_INCDIRS} ${OPENCV3_INCLUDE_DIRS})
	SET(CALIB_LIBDIRS ${CAER_LIBDIRS} ${OPENCV3_LIBRARY_DIRS})

	SET(CALIB_C_LIBS ${CAER_C_LIBS} -lallegro_audio -lallegro_acodec)
	SET(CALIB_CXX_LIBS ${CAER_CXX_LIBS} ${OPENCV3_LIBRARIES})

	INCLUDE_DIRECTORIES(${CALIB_INCDIRS})
	LINK_DIRECTORIES(${CALIB_LIBDIRS})

	ADD_LIBRARY(stereocalibration SHARED stereocalibration.c calibration.cpp calibration_wrapper.cpp)

	SET_TARGET_PROPERTIES(stereocalibration
		PROPERTIES
		PREFIX "caer_"
	)

	TARGET_LINK_LIBRARIES(stereocalibration ${CALIB_C_LIBS} ${CALIB_CXX_LIBS})
ENDIF()
