IF (NOT STEREOMATCHING)
	SET(STEREOMATCHING 0 CACHE BOOL "Enable stereo camera matching")
ENDIF()

IF (STEREOMATCHING)
	# Require new OpenCV 3.1 at least.
	PKG_CHECK_MODULES(OPENCV3 REQUIRED opencv>=3.1)

	SET(STEREOMATCHING_INCDIRS ${OPENCV3_INCLUDE_DIRS})
	SET(STEREOMATCHING_LIBDIRS ${OPENCV3_LIBRARY_DIRS})

	SET(STEREOMATCHING_C_LIBS ${CAER_C_LIBS} "-lallegro_audio -lallegro_acodec"  )
	SET(STEREOMATCHING_CXX_LIBS ${CAER_CXX_LIBS} ${OPENCV3_LIBRARIES} -lopencv_aruco)

	SET(STEREOMATCHING_C_SRC_FILES  stereomatching.c)
	SET(STEREOMATCHING_CXX_SRC_FILES  stereomatching.cpp  stereomatching_wrapper.cpp)

	INCLUDE_DIRECTORIES(${STEREOMATCHING_INCDIRS})
	LINK_DIRECTORIES(${STEREOMATCHING_LIBDIRS})
	
	ADD_LIBRARY(stereomatching SHARED ${STEREOMATCHING_CXX_SRC_FILES} ${STEREOMATCHING_C_SRC_FILES})

	TARGET_LINK_LIBRARIES(stereomatching ${STEREOMATCHING_C_LIBS} ${STEREOMATCHING_CXX_LIBS})
	
	INSTALL(TARGETS stereomatching DESTINATION ${CM_SHARE_DIR})
	
ENDIF()
